# networking-omnipath

./: .gitignore  .gitreview  .pylintrc  .stestr.conf  .zuul.yaml  README.md  README.rst  RELEASENOTES.rst  lower-constraints.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: README.rst  functions  local_ironic.conf.sample  plugin.sh
doc/source/: conf.py
doc/source/admin/: reference_architecture.rst
doc/source/configuration/: index.rst
doc/source/configuration/samples/: ml2_conf.rst
doc/source/contributor/: contributing.rst  drivers_architecture.rst  index.rst  quickstart.rst  testing.rst  usage.rst
doc/source/contributor/specs/: index.rst
doc/source/install/: installation.rst
etc/neutron/plugins/ml2/: ml2_omnipath.ini
omnipath/: __init__.py  config.py  constants.py  omnipath_exceptions.py  omnipath_thread.py  omnipath_worker.py
omnipath/common/: constants.py  omnipath_conf.py  omnipath_exceptions.py
omnipath/db/: api.py  models.py
omnipath/db/migration/alembic_migrations/: README  env.py  script.py.mako
omnipath/db/migration/alembic_migrations/versions/: EXPAND_HEAD  initial_branchpoint.py
omnipath/mechanism_driver/: fabric_agent.py  mech_omnipath.py
omnipath/mechanism_driver/common/: worker.py
omnipath/object/: omnipathallocation.py
omnipath/tests/functional/: requirements.txt
omnipath/tests/functional/db/: test_migrations.py
omnipath/tests/unit/: base.py  db_base.py
omnipath/tests/unit/mechanism_driver/: test_fabric_agent.py  test_mech_omnipath.py
omnipath/type_driver/: type_omnipath.py
releasenotes/notes/: initial_omnipath_note-1ccd0ec31cad0e65.yaml  reno.cache
releasenotes/source/: conf.py  index.rst
tools/: coding-checks.sh
(+1 files in other folders)
