[metadata]
name = networking-omnipath
summary = OpenStack Networking
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/networking-omnipath/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    omnipath

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
# Allowed configuration settings:
#
# [ml2]
# mechanism_drivers = omnipath_mech
neutron.ml2.mechanism_drivers =
    omnipath_mech = omnipath.mechanism_driver.mech_driver.mech_omnipath:OmnipathMechanismDriver
neutron.db.alembic_migrations =
    networking-omnipath = omnipath.db.migration:alembic_migrations
oslo.config.opts =
    ml2_omnipath = omnipath.common.omnipath_conf:list_opts

[build_releasenotes]
build-dir = releasenotes/build
source-dir = releasenotes/source
all_files = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = omnipath/locale/networking-omnipath.pot

[compile_catalog]
directory = omnipath/locale
domain = networking-omnipath

[update_catalog]
domain = networking-omnipath
output_dir = omnipath/locale
input_file = omnipath/locale/networking-omnipath.pot

[wheel]
universal = 1
